--- a/Styles/Leaderboard.css
+++ b/Styles/Leaderboard.css
@@ -59,23 +59,31 @@ tr:nth-child(even) {
 .edit-button:hover {
   background-color: #0069d9;
 }
-
 html,
 body {
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sheet-container {
+  width: 100%;
   height: 100%;
-  padding-left: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sheet-iframe {
-  padding-top: 80px;
   width: 100%;
-  height: 1080px;
+  height: 100%;
   border: none;
-  margin-left: 12.5%;
+  width: 100%;
+  max-width: 1011px;
+  height: 100%;
+  padding-top: 180px;
 }
